Bug 30952: Fix contrast issue on patron brief view
Issue #19

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -1331,6 +1331,7 @@ dd {
     margin-right: .5em;
     padding-top: 1em;
     background-color: #e6e6e6;
+    color: #000;
     left: -10px;
     width: 100%;
     padding-bottom: 25px;
@@ -1925,7 +1926,7 @@ li {
 }
 
 .empty {
-    color: #CCC;
+    color: #666;
 }
 
 .address {
